--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -78,17 +78,16 @@
   }
   .flightTextContainer {
     grid-area: 2/1/3/3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
   .flightTextContainer h2 {
     text-align: center;
   }
-  .departureFlightSelected {
-    max-width: 950px;
+  .flight {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 900px;
     margin-top: 10px;
     border: 1px black dashed;
     padding: 10px;
+    position: relative;
   }
