--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -102,7 +102,7 @@
 position: absolute;
 right: 13px;
 bottom: 19px;
-width: 116px;
+width: 100px;
 height: 36px;
 border-radius: 4px;
 border: none;
@@ -117,6 +117,7 @@ color: var(--LightText-color);
 .selectFlightBtn{
   composes: detailsBtn;
   background-color: rgb(248, 113, 113);
+  right: 133px;
 }
 .selectFlightBtn:hover{
   cursor: pointer;
@@ -164,4 +165,26 @@ color: var(--LightText-color);
 .flightTime{
   position: relative;
   width: 160px;
+}
+/*detailsDialog*/
+.detailsPanel {
+  position: fixed ;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  background-color: rgb(0,0,0,0.3);
+  height: 100vh;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+.detailsPanel.open {
+  right: 0;
+}
+
+.detailsPanelContent {
+  height: 100%;
+  overflow-y: auto;
+  position: absolute;
+  right: 0;
 }
