--- a/src/pages/MyBookings/TicketPrint.module.css
+++ b/src/pages/MyBookings/TicketPrint.module.css
@@ -88,7 +88,7 @@
 
 .ticketInfo {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 30px;
 }
