--- a/src/pages/MyBookings/AirplaneSeatMap/AirplaneSeatMap.module.css
+++ b/src/pages/MyBookings/AirplaneSeatMap/AirplaneSeatMap.module.css
@@ -101,9 +101,9 @@
   border-top: none;
   position: relative;
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   justify-content: center;
-  padding-top: 20px;
+  padding-bottom: 30px;
   box-shadow: 
     0 15px 30px rgba(0, 0, 0, 0.1),
     inset 0 -2px 8px rgba(255, 255, 255, 0.9);
