--- a/src/pages/MyBookings/AirplaneSeatMap/AirplaneSeatMap.module.css
+++ b/src/pages/MyBookings/AirplaneSeatMap/AirplaneSeatMap.module.css
@@ -519,6 +519,19 @@
   margin: 0 0 1rem;
 }
 
+.travelersList {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.travelerInfo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .bookedSeatInfo {
   display: flex;
   align-items: center;
