Adding aircraft to details     also disabling stops that don`t exist.

--- a/src/pages/Home/FlightSearchForm.module.css
+++ b/src/pages/Home/FlightSearchForm.module.css
@@ -11,7 +11,7 @@
   z-index: 2;
 }
 
-.flightSearchForm {
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
